--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
     <div id="root" class="scroll-container"></div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
+
+
+    
+    <script async="async" data-cfasync="false" src="//pl26834167.profitableratecpm.com/59c23d7423070a348f45a35160c43817/invoke.js"></script>
+<div id="container-59c23d7423070a348f45a35160c43817"></div>
+
+
+
+
     
     <!-- Additional SEO scripts for enhanced indexing -->
     <script type="application/ld+json">
