--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       }
     </style>
+
+    <script type='text/javascript' src='//pl26834204.profitableratecpm.com/69/0c/99/690c991e5276410fb941b547108da734.js'></script>
+    
   </head>
 
   <body>
