--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
 
-
+<!-- Additional ADS -->
     
     <script async="async" data-cfasync="false" src="//pl26834167.profitableratecpm.com/59c23d7423070a348f45a35160c43817/invoke.js"></script>
 <div id="container-59c23d7423070a348f45a35160c43817"></div>
-
-
+  <script async="async" data-cfasync="false" src="//swimmertinkergrapefruit.com/59c23d7423070a348f45a35160c43817/invoke.js"></script>
+<div id="container-59c23d7423070a348f45a35160c43817"></div>
+<script async="async" data-cfasync="false" src="//swimmertinkergrapefruit.com/59c23d7423070a348f45a35160c43817/invoke.js"></script>
+<div id="container-59c23d7423070a348f45a35160c43817"></div>
 
 
     
