--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
 
-<!-- Additional ADS -->
+<!-- Additional ADS 
     
     <script async="async" data-cfasync="false" src="//pl26834167.profitableratecpm.com/59c23d7423070a348f45a35160c43817/invoke.js"></script>
 <div id="container-59c23d7423070a348f45a35160c43817"></div>
@@ -157,7 +157,7 @@
 	};
 </script>
 <script type="text/javascript" src="//swimmertinkergrapefruit.com/a9bd0f3196303fadfce8201602a72289/invoke.js"></script>
-
+-->
     
 
 
